compiler/test/conformance/invalid/inv_missing_return_type.tu
// INVÁLIDO: "->" sem um tipo de retorno depois
fn f() -> {
  return 1
}

fn main() {
  print(f())
}
